--- a/pagGaleria.html
+++ b/pagGaleria.html
@@ -31,7 +31,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="pagLogin.html"><button type="button" class="btn btn-primary">
+                    <a class="nav-link" href="index.html"><button type="button" class="btn btn-primary">
                       Login
                     </button></a>
                   </li>
