--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </div>
   </main>
-  <footer class="container-fluid bg-primary">
+  <footer class="container-fluid">
     <div class="row text-center">
       <a href="https://www.facebook.com/?locale=es_LA" class="col-3">
         <img src="https://cdn-icons-png.flaticon.com/128/174/174848.png" alt="img" id="redes">
